// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MagellanAI's lead destination action: all fields 1`] = `
Object {
  "category": "dtVRL!L9hrw]avE1wNG",
  "currency": "HNL",
  "id": "dtVRL!L9hrw]avE1wNG",
  "productId": "dtVRL!L9hrw]avE1wNG",
  "quantity": 75893497596477.44,
  "token": "dtVRL!L9hrw]avE1wNG",
  "type": "dtVRL!L9hrw]avE1wNG",
  "value": 75893497596477.44,
}
`;

exports[`Testing snapshot for MagellanAI's lead destination action: required fields 1`] = `
Object {
  "currency": "HNL",
  "id": "dtVRL!L9hrw]avE1wNG",
  "token": "dtVRL!L9hrw]avE1wNG",
  "value": 75893497596477.44,
}
`;
